{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 2,
  "lineage": "172c80a0-0e80-64c3-1e1e-3dc3ae83d387",
  "resources": [
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:loadbalancer/app/ext-alb/6a3f00a02101f3f0",
            "arn_suffix": "app/ext-alb/6a3f00a02101f3f0",
            "dns_name": "ext-alb-2069524826.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:loadbalancer/app/ext-alb/6a3f00a02101f3f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-05de2f601735d82b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03eafeaad11db4a1a"
              },
              {
                "subnet_id": "subnet-0989140c87bd04ec7"
              }
            ],
            "subnets": [
              "subnet-03eafeaad11db4a1a",
              "subnet-0989140c87bd04ec7"
            ],
            "tags": {
              "Name": "main-ext-alb"
            },
            "tags_all": {
              "Name": "main-ext-alb"
            },
            "vpc_id": "vpc-01a11fbe587e402ae",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:loadbalancer/app/ialb/37eda21ed228237c",
            "arn_suffix": "app/ialb/37eda21ed228237c",
            "dns_name": "internal-ialb-1333404344.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:loadbalancer/app/ialb/37eda21ed228237c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-0f4d1db35e98bf7fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e50da8f3ab9aecc"
              },
              {
                "subnet_id": "subnet-0f8a5e53b4c2387aa"
              }
            ],
            "subnets": [
              "subnet-00e50da8f3ab9aecc",
              "subnet-0f8a5e53b4c2387aa"
            ],
            "tags": {
              "Name": "main-int-alb"
            },
            "tags_all": {
              "Name": "main-int-alb"
            },
            "vpc_id": "vpc-01a11fbe587e402ae",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.main-sg",
            "module.networking.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener/app/ext-alb/6a3f00a02101f3f0/25409dc82776b6a9",
            "certificate_arn": "arn:aws:acm:us-east-1:323678568700:certificate/476543d4-9828-4046-ac4d-c489b9c61422",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/nginx-tgt/1eaa93731c85be74",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener/app/ext-alb/6a3f00a02101f3f0/25409dc82776b6a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:loadbalancer/app/ext-alb/6a3f00a02101f3f0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.certificate.aws_acm_certificate.rotimi",
            "module.certificate.aws_acm_certificate_validation.rotimi",
            "module.loadbalancing.aws_lb.ext-alb",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.main-sg",
            "module.certificate.aws_route53_record.rotimi",
            "module.certificate.data.aws_route53_zone.rotimi",
            "module.loadbalancing.aws_lb_target_group.nginx-tgt",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener/app/ialb/37eda21ed228237c/d4d334beb8e73c99",
            "certificate_arn": "arn:aws:acm:us-east-1:323678568700:certificate/476543d4-9828-4046-ac4d-c489b9c61422",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/wordpress-tgt/03cbf73c48fbf2fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener/app/ialb/37eda21ed228237c/d4d334beb8e73c99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:loadbalancer/app/ialb/37eda21ed228237c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.certificate.aws_acm_certificate_validation.rotimi",
            "module.certificate.aws_route53_record.rotimi",
            "module.certificate.data.aws_route53_zone.rotimi",
            "module.loadbalancing.aws_lb.ialb",
            "module.loadbalancing.aws_lb_target_group.wordpress-tgt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.certificate.aws_acm_certificate.rotimi",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/tooling-tgt/11ab0e3b0dffb370",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener-rule/app/ialb/37eda21ed228237c/d4d334beb8e73c99/942e2565da8d48ea",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.dev-rotimi.ml"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener-rule/app/ialb/37eda21ed228237c/d4d334beb8e73c99/942e2565da8d48ea",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:listener/app/ialb/37eda21ed228237c/d4d334beb8e73c99",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.certificate.data.aws_route53_zone.rotimi",
            "module.loadbalancing.aws_lb.ialb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.loadbalancing.aws_lb_target_group.wordpress-tgt",
            "module.security.aws_security_group.main-sg",
            "module.certificate.aws_acm_certificate.rotimi",
            "module.certificate.aws_acm_certificate_validation.rotimi",
            "module.certificate.aws_route53_record.rotimi",
            "module.loadbalancing.aws_lb_listener.web-listener",
            "module.loadbalancing.aws_lb_target_group.tooling-tgt"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/nginx-tgt/1eaa93731c85be74",
            "arn_suffix": "targetgroup/nginx-tgt/1eaa93731c85be74",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/nginx-tgt/1eaa93731c85be74",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/tooling-tgt/11ab0e3b0dffb370",
            "arn_suffix": "targetgroup/tooling-tgt/11ab0e3b0dffb370",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/tooling-tgt/11ab0e3b0dffb370",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/wordpress-tgt/03cbf73c48fbf2fb",
            "arn_suffix": "targetgroup/wordpress-tgt/03cbf73c48fbf2fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323678568700:targetgroup/wordpress-tgt/03cbf73c48fbf2fb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a7b74e99284ca5a1",
            "domain": "vpc",
            "id": "eipalloc-083aa16ef8b885245",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bf417c6073d47d9c",
            "private_dns": "ip-172-16-2-167.ec2.internal",
            "private_ip": "172.16.2.167",
            "public_dns": "ec2-54-165-18-10.compute-1.amazonaws.com",
            "public_ip": "54.165.18.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-EIP-production"
            },
            "tags_all": {
              "Name": "main-EIP-production"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:internet-gateway/igw-02a7d6e4064e45a49",
            "id": "igw-02a7d6e4064e45a49",
            "owner_id": "323678568700",
            "tags": {
              "Name": "ig--vpc-01a11fbe587e402ae!"
            },
            "tags_all": {
              "Name": "ig--vpc-01a11fbe587e402ae!"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083aa16ef8b885245",
            "connectivity_type": "public",
            "id": "nat-0c97993b560342e52",
            "network_interface_id": "eni-0bf417c6073d47d9c",
            "private_ip": "172.16.2.167",
            "public_ip": "54.165.18.10",
            "subnet_id": "subnet-0989140c87bd04ec7",
            "tags": {
              "Name": "main-Nat-production"
            },
            "tags_all": {
              "Name": "main-Nat-production"
            }
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main_igw"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af25820d791591aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c97993b560342e52",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af25820d791591aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private-rtb"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a7d6e4064e45a49",
            "id": "r-rtb-0c6cdff41260ef2fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6cdff41260ef2fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_route_table.public-rtb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:route-table/rtb-0af25820d791591aa",
            "id": "rtb-0af25820d791591aa",
            "owner_id": "323678568700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c97993b560342e52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-Private-Route-Table"
            },
            "tags_all": {
              "Name": "main-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:route-table/rtb-0c6cdff41260ef2fe",
            "id": "rtb-0c6cdff41260ef2fe",
            "owner_id": "323678568700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a7d6e4064e45a49",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-Public-Route-Table"
            },
            "tags_all": {
              "Name": "main-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2b7fe5a4b456110",
            "route_table_id": "rtb-0af25820d791591aa",
            "subnet_id": "subnet-0f8a5e53b4c2387aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.aws_route_table.private-rtb",
            "module.networking.aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fc08aa66cb50995",
            "route_table_id": "rtb-0af25820d791591aa",
            "subnet_id": "subnet-00e50da8f3ab9aecc"
          },
          "dependencies": [
            "module.networking.aws_route_table.private-rtb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0974625ce92f337c7",
            "route_table_id": "rtb-0af25820d791591aa",
            "subnet_id": "subnet-09fffacb2303b4c3d"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.aws_route_table.private-rtb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e443c65e6cefea1c",
            "route_table_id": "rtb-0af25820d791591aa",
            "subnet_id": "subnet-009cf10da50786bde"
          },
          "dependencies": [
            "module.networking.aws_route_table.private-rtb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0626f1142ec78c2e6",
            "route_table_id": "rtb-0c6cdff41260ef2fe",
            "subnet_id": "subnet-0989140c87bd04ec7"
          },
          "dependencies": [
            "module.networking.aws_route_table.public-rtb",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b3def665e3c989f",
            "route_table_id": "rtb-0c6cdff41260ef2fe",
            "subnet_id": "subnet-03eafeaad11db4a1a"
          },
          "dependencies": [
            "module.networking.aws_route_table.public-rtb",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:subnet/subnet-0f8a5e53b4c2387aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0f8a5e53b4c2387aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323678568700",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:subnet/subnet-00e50da8f3ab9aecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-00e50da8f3ab9aecc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323678568700",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:subnet/subnet-09fffacb2303b4c3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.5.0/24",
            "id": "subnet-09fffacb2303b4c3d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323678568700",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:subnet/subnet-009cf10da50786bde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.7.0/24",
            "id": "subnet-009cf10da50786bde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323678568700",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:subnet/subnet-0989140c87bd04ec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-0989140c87bd04ec7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323678568700",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:subnet/subnet-03eafeaad11db4a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "id": "subnet-03eafeaad11db4a1a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323678568700",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:vpc/vpc-01a11fbe587e402ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0fa03014423b6bab6",
            "default_route_table_id": "rtb-05ebc60b9fc98ea0c",
            "default_security_group_id": "sg-00c104e84ec542ea6",
            "dhcp_options_id": "dopt-046c607e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01a11fbe587e402ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ebc60b9fc98ea0c",
            "owner_id": "323678568700",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:security-group/sg-0d78139eb4d90466a",
            "description": "Bastion Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d78139eb4d90466a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion",
            "name_prefix": "",
            "owner_id": "323678568700",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "datalayer",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:security-group/sg-055f0203c0c81495c",
            "description": "datalayer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055f0203c0c81495c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer",
            "name_prefix": "",
            "owner_id": "323678568700",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ext-alb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:security-group/sg-05de2f601735d82b5",
            "description": "Security Group for Ext-Alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05de2f601735d82b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext-alb",
            "name_prefix": "",
            "owner_id": "323678568700",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "int-alb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:security-group/sg-0f4d1db35e98bf7fe",
            "description": "Internal Loadbalancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4d1db35e98bf7fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "int-alb",
            "name_prefix": "",
            "owner_id": "323678568700",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "nginx",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:security-group/sg-05e8b30ac08bf3d5a",
            "description": "Nginx Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e8b30ac08bf3d5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Nginx",
            "name_prefix": "",
            "owner_id": "323678568700",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webservers",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323678568700:security-group/sg-0e8bfec78afa2d3a5",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8bfec78afa2d3a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webservers",
            "name_prefix": "",
            "owner_id": "323678568700",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a11fbe587e402ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1141565837",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05e8b30ac08bf3d5a",
            "self": false,
            "source_security_group_id": "sg-0d78139eb4d90466a",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3214707305",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f4d1db35e98bf7fe",
            "self": false,
            "source_security_group_id": "sg-05e8b30ac08bf3d5a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2251177351",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-055f0203c0c81495c",
            "self": false,
            "source_security_group_id": "sg-0d78139eb4d90466a",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3109493692",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-055f0203c0c81495c",
            "self": false,
            "source_security_group_id": "sg-0e8bfec78afa2d3a5",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-714181430",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-055f0203c0c81495c",
            "self": false,
            "source_security_group_id": "sg-0e8bfec78afa2d3a5",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2150916860",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05e8b30ac08bf3d5a",
            "self": false,
            "source_security_group_id": "sg-05de2f601735d82b5",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2326624336",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8bfec78afa2d3a5",
            "self": false,
            "source_security_group_id": "sg-0f4d1db35e98bf7fe",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2250863013",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8bfec78afa2d3a5",
            "self": false,
            "source_security_group_id": "sg-0d78139eb4d90466a",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.main-sg"
          ]
        }
      ]
    }
  ]
}